@@ -6,7 +6,7 @@
 
 ;; Keywords: ruby rails languages oop
 ;; $URL: svn://rubyforge.org/var/svn/emacs-rails/trunk/rails-model-layout.el $
-;; $Id: rails-model-layout.el 131 2007-03-26 21:01:00Z dimaexe $
+;; $Id: rails-model-layout.el 158 2007-04-03 08:45:46Z dimaexe $
 
 ;;; License
 
@@ -26,13 +26,49 @@
 
 ;;; Code:
 
+(defun rails-model-layout:keymap (type)
+  (let* ((name (capitalize (substring (symbol-name type) 1)))
+         (map (make-sparse-keymap))
+         (menubar (make-sparse-keymap))
+         (model (rails-core:current-model))
+         (controller (pluralize-string model)))
+    (when type
+      (unless (rails-core:mailer-p model)
+        (unless (eq type :model)
+          (define-key menubar [go-to-model]      '("Go to Model" . rails-model-layout:switch-to-model))
+          (define-key map (kbd "\C-c m")         'rails-model-layout:switch-to-model))
+        (unless (eq type :unit-test)
+          (define-key menubar [go-to-unit-test]  '("Go to Unit Test" . rails-model-layout:switch-to-unit-test))
+          (define-key map (kbd "\C-c u")         'rails-model-layout:switch-to-unit-test))
+        (when (and (not (eq type :migration))
+                   (rails-core:migration-file (format "Create%s" controller)))
+          (define-key menubar [go-to-migration]  '("Go to Migration" . rails-model-layout:switch-to-migration))
+          (define-key map (kbd "\C-c g")         'rails-model-layout:switch-to-migration))
+        (when (and (not (eq type :controller))
+                   (rails-core:controller-exist-p controller))
+          (define-key menubar [go-to-controller] '("Go to Controller" . rails-model-layout:switch-to-controller))
+          (define-key map (kbd "\C-c c")         'rails-model-layout:switch-to-controller))
+        (unless (eq type :fixture)
+          (define-key menubar [go-to-fixture]    '("Go to Fixture" . rails-model-layout:switch-to-fixture))
+          (define-key map (kbd "\C-c x")         'rails-model-layout:switch-to-fixture)))
+      (when (rails-core:mailer-p model)
+        (define-key menubar [go-to-mailer] '("Go to Mailer" . rails-model-layout:switch-to-mailer))
+        (define-key map (kbd "\C-c n")         'rails-model-layout:switch-to-mailer))
+      (define-key menubar [sep] (rails-core:menu-separator))
+      (define-key menubar [primary-switch] '("Switch to related" . rails-lib:run-primary-switch))
+      (define-key menubar [secondary-switch] '("Switch to related with menu" . rails-lib:run-secondary-switch))
+      (define-key map [menu-bar rails-model-layout] (cons name menubar)))
+    map))
+
 (defun rails-model-layout:switch-to (type)
   (let* ((model (rails-core:current-model))
+         (controller (rails-core:current-controller))
+         (item (if controller controller model))
          (item (case type
                  (:mailer (rails-core:mailer-file model))
                  (:controller (rails-core:controller-file (pluralize-string model)))
                  (:fixture (rails-core:fixture-file model))
-                 (:unit-test (rails-core:unit-test-file model))
+                 (:unit-test (rails-core:unit-test-file item))
                  (:model (rails-core:model-file model))
                  (:migration (rails-core:migration-file (concat "Create" (pluralize-string model)))))))
     (when item
@@ -40,8 +76,15 @@
         (if (file-exists-p file)
             (progn
               (find-file file)
-              (message (format "%s: %s" (substring (symbol-name type) 1) model)))
+              (message (format "%s: %s" (substring (symbol-name type) 1) item)))
           (message "File %s not exists" file))))))
+
+(defun rails-model-layout:switch-to-mailer () (interactive) (rails-model-layout:switch-to :mailer))
+(defun rails-model-layout:switch-to-controller () (interactive) (rails-model-layout:switch-to :controller))
+(defun rails-model-layout:switch-to-fixture () (interactive) (rails-model-layout:switch-to :fixture))
+(defun rails-model-layout:switch-to-unit-test () (interactive) (rails-model-layout:switch-to :unit-test))
+(defun rails-model-layout:switch-to-model () (interactive) (rails-model-layout:switch-to :model))
+(defun rails-model-layout:switch-to-migration () (interactive) (rails-model-layout:switch-to :migration))
 
 (defun rails-model-layout:menu ()
   (interactive)
